--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <div id="app">
+    <main>
+      <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quibusdam perspiciatis, molestias facilis veniam nesciunt laborum deleniti dignissimos voluptatem sint? Dolores cum minus aliquid voluptatibus tenetur vitae consequuntur exercitationem nostrum.</div>
+    </main>
+
+    <aside><div class="aside-container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, sunt soluta! Quod ratione aliquam nihil quam sequi, illo placeat aut rem exercitationem labore aperiam reprehenderit doloribus veritatis recusandae, esse cumque.</div>
+    </aside>
+  </div>
   
 </body>
 </html>
