--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
             <label for="terms">
                 Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
             </label>
+
+            <div class="actions-wrapper">
+                
+            </div>
           </div>
         </form>
       </div>
