--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                 <div class="radio-inner">
                   <div class="radio-image"></div>
-                  <input type="radio" name="sport" id="boxing">
+                  <input type="radio" name="sport" id="volley">
                   <img src="assets/icons/volleyball.svg" alt="Ícone de vôlei">
                   <label for="yoga">Vôlei</label>
                 </div>
