Aterando label no radio-inner para volley

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <div class="radio-image"></div>
                   <input type="radio" name="sport" id="volley">
                   <img src="assets/icons/volleyball.svg" alt="Ícone de vôlei">
-                  <label for="yoga">Vôlei</label>
+                  <label for="volley">Vôlei</label>
                 </div>
 
                 <div class="radio-inner">
